fix for vert alignment of checkbox

--- a/src/components/molecules/cards/BacklogItemCard.module.css
+++ b/src/components/molecules/cards/BacklogItemCard.module.css
@@ -273,5 +273,5 @@
 }
 
 .checkbox {
-    top: -0.1rem;
+    padding-top: 0.225rem;
 }
